--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "canvas-confetti": "^1.9.3",
     "flowbite-react": "^0.11.8",
     "lightgallery": "^2.9.0-beta.1",
     "react": "^19.1.0",
@@ -20,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-signature-canvas": "^1.1.0-alpha.2",
+    "screenfull": "^6.0.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
