--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@tailwindcss/vite": "^4.1.11",
     "canvas-confetti": "^1.9.3",
     "flowbite-react": "^0.11.8",
